@@ -15,3 +15,4 @@ Version 0.2.X - Release date 2007-??-??
 - (PJS) libjjack.c - fixed so that allocation of objects are done once and not for every process() call
 - (PJS) Javasound mixerprovider support for inputs (TargetDataLines)
 - (PJS) Eclipse compiler compliance level set to 1.4
+- (PJS) ByteIntConverter for supporting various audioformats
